--- a/portfolio/src/app/shared/component/footer/footer.component.scss
+++ b/portfolio/src/app/shared/component/footer/footer.component.scss
@@ -41,6 +41,13 @@ footer {
   gap: 20px;
   cursor: pointer;
 
+  .git-wrapper,
+  .email-wrapper,
+  .in-wrapper {
+    width: 42px;
+    height: 42px;
+  }
+
   .git {
     @include social-media-icon(
       30px,
