--- a/portfolio/src/styles/_mixins.scss
+++ b/portfolio/src/styles/_mixins.scss
@@ -32,6 +32,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
 
   @if $hover-url != null {
     &:hover {
